--- a/daoctl.yaml
+++ b/daoctl.yaml
@@ -9,3 +9,4 @@ Treasury:
   EthUSDTAddress: 0xC20f453a4B4995CA032570f212988F4978B35dDd
   BtcAddress: 35hfgfaUouzYixTUDV6CFqMiTSZcuNtTf9
 TelosDecideContract: trailservice
+DAOUser: johnnyhypha1
