added ability to query the blockchain, added vault support, lots of bug fixes

--- a/daoctl-test.yaml
+++ b/daoctl-test.yaml
@@ -10,3 +10,4 @@ Treasury:
   BtcAddress: 35hfgfaUouzYixTUDV6CFqMiTSZcuNtTf9
 TelosDecideContract: trailservice
 DAOUser: johnnyhypha1
+HyperionEndpoint: https://testnet.telosusa.io/v2
