--- a/daoctl.yaml
+++ b/daoctl.yaml
@@ -10,3 +10,4 @@ Treasury:
   BtcAddress: 35hfgfaUouzYixTUDV6CFqMiTSZcuNtTf9
 TelosDecideContract: trailservice
 DAOUser: hyphanewyork
+HyperionEndpoint: https://mainnet.telosusa.io/v2
