--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -7,6 +7,10 @@ before:
 builds:
 - env:
   - CGO_ENABLED=0
+- goos:
+  - windows
+  - darwin
+  - freebsd
 archives:
 - replacements:
     darwin: Darwin
