--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -5,30 +5,29 @@ before:
     # You may remove this if you don't use go modules.
     - go mod download
 builds:
-- env:
-  - CGO_ENABLED=0
-- goos:
-  - windows
-  - darwin
-  - freebsd
-- goarch:
-  - 386
-  - amd64
-  - arm64
+  - 
+    env:
+      - CGO_ENABLED=0
+    goos:
+      - windows
+      - darwin
+      - linux
 archives:
-- replacements:
-    darwin: Darwin
-    linux: Linux
-    windows: Windows
-    386: i386
-    amd64: x86_64
-- format_overrides:
-  - goos: windows
-    format: zip
+  - 
+    replacements:
+      darwin: Darwin
+      linux: Linux
+      windows: Windows
+      386: i386
+      amd64: x86_64
+
+    format_overrides:
+      - goos: windows
+        format: zip
 checksum:
   name_template: 'checksums.txt'
 snapshot:
-  name_template: "{{ .Tag }}-next"
+  name_template: "{{ .Tag }}"
 release:
   github:
     owner: hypha-dao
