--- a/daoctl-test.yaml
+++ b/daoctl-test.yaml
@@ -9,5 +9,5 @@ Treasury:
   EthUSDTAddress: 0xC20f453a4B4995CA032570f212988F4978B35dDd
   BtcAddress: 35hfgfaUouzYixTUDV6CFqMiTSZcuNtTf9
 TelosDecideContract: trailservice
-DAOUser: johnnyhypha1
+DAOUser: treasurermmm
 HyperionEndpoint: https://testnet.telosusa.io/v2
