--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,8 +1,6 @@
 # This is an example goreleaser.yaml file with some sane defaults.
-# Make sure to check the documentation at http://goreleaser.com
 before:
   hooks:
-    # You may remove this if you don't use go modules.
     - go mod download
 builds:
   - 
@@ -40,6 +38,15 @@ changelog:
     exclude:
     - '^docs:'
     - '^test:'
+dockers:
+  -
+    goos: linux
+    goarch: amd64
+    goarm: ''
+    binaries:
+    - daoctl
+    image_templates:
+    - "hyphagroup/daoctl:latest"
 # signs:
 #   artifacts: checksum
 #   cmd: gpg2
