added support for documents, docker image build, redemption requests, and treasury actions

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -47,6 +47,9 @@ dockers:
     - daoctl
     image_templates:
     - "dsmaxds/daoctl:latest"
+    dockerfile: Dockerfile
+    extra_files:
+    - config.yml
 # signs:
 #   artifacts: checksum
 #   cmd: gpg2
