--- a/daoctl.yaml
+++ b/daoctl.yaml
@@ -5,11 +5,8 @@ Treasury:
   TokenContract: husd.hypha
   Symbol: HUSD
   Contract: bank.hypha
-  EthUSDTContract: 0xdac17f958d2ee523a2206206994597c13d831ec7
-  EthUSDTAddress: 0xC20f453a4B4995CA032570f212988F4978B35dDd
-  BtcAddress: 35hfgfaUouzYixTUDV6CFqMiTSZcuNtTf9
 TelosDecideContract: trailservice
-DAOUser: hyphanewyork
+DAOUser: 
 HyperionEndpoint: https://mainnet.telosusa.io/v2
 BallotPrefix: hypha1.....
 RewardTokenSymbol: HYPHA
