added support for documents, docker image build, redemption requests, and treasury actions

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -49,7 +49,7 @@ dockers:
     - "dsmaxds/daoctl:latest"
     dockerfile: Dockerfile
     extra_files:
-    - daoctl.yml
+    - daoctl.yaml
 # signs:
 #   artifacts: checksum
 #   cmd: gpg2
