--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -8,7 +8,6 @@ builds:
       - CGO_ENABLED=0
     goos:
       - windows
-      - darwin
       - linux
 archives:
   - 
@@ -37,18 +36,18 @@ changelog:
     exclude:
     - '^docs:'
     - '^test:'
-dockers:
-  -
-    goos: linux
-    goarch: amd64
-    goarm: ''
-    binaries:
-    - daoctl
-    image_templates:
-    - "dsmaxds/daoctl:latest"
-    dockerfile: Dockerfile
-    extra_files:
-    - daoctl.yaml
+# dockers:
+#   -
+#     goos: linux
+#     goarch: amd64
+#     goarm: ''
+#     binaries:
+#     - daoctl
+#     image_templates:
+#     - "dsmaxds/daoctl:latest"
+#     dockerfile: Dockerfile
+#     extra_files:
+#     - daoctl.yaml
 # signs:
 #   artifacts: checksum
 #   cmd: gpg2
