--- a/daoctl-test.yaml
+++ b/daoctl-test.yaml
@@ -1,4 +1,4 @@
-EosioEndpoint: https://test.telos.kitchen
+EosioEndpoint: https://testnet.telos.caleos.io
 AssetsAsFloat: true
 DAOContract: dao.hypha
 Treasury:
