lots of changes for retrieving documents and also updated getRoles

--- a/daoctl.yaml
+++ b/daoctl.yaml
@@ -19,3 +19,4 @@ SeedsExchangeContract: tlosto.seeds
 EscrowContract: escrow.seeds
 HyphaSeedsAccount: hypha.seeds
 SeedsTokenContract: token.seeds
+global-debug: false
