--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -39,8 +39,7 @@ dockers:
   -
     goos: linux
     goarch: amd64
-    binaries:
-    - daoctl
+    ids: ['daoctl']
     image_templates:
     - "dappdever/daoctl:latest"
     - "dappdever/daoctl:{{ .Tag }}"
